game menu cleanup. Missing functionalities added. Code cleanup and improvements added.